tests/paczka1/fuzzy1/37510873.err
Error in line 4: nSbx S612 3,2
Error in line 20: sVe7XWw9 S498 47,1
Error in line 30: S612 S612 50,/
Error in line 17: S612 S498 32,8
